<resources>
    <string name="app_name">MoneyKeeper</string>
    <string name="title">Your accounts</string>
    <string name="setting_category">ADD/DELETE category</string>
    <string name="setting_accounts">ADD/DELETE accounts</string>
    <string name="button_settings">Settings</string>
    <string name="plus">Add Profit</string>
    <string name="minus">Add Expense</string>
    <string name="add_account">Enter account name</string>
    <string name="add_category">Enter category name</string>
    <string name="add">Add</string>
    <string name="summa">You have</string>
    <string name="delete">Delete</string>
    <string name="enterFragment">Enter count</string>
    <string name="category">Category</string>
</resources>