<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_below="@id/accounts_list_main"
    android:layout_marginTop="35dp">

    <Spinner
        android:id="@+id/accountSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"

        android:layout_weight="1"

        />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1" />
    <EditText
        android:id="@+id/enterNumber"
        android:layout_width="100dp"
        android:layout_height="40dp"

        android:inputType="number"
        android:hint="@string/enterFragment"
        android:layout_marginEnd="20dp"/>

</LinearLayout>
    />
    <TextView
        android:id="@+id/you_have"
        android:layout_below="@id/statisticLayout"

        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summa" />

    <TextView
        android:id="@+id/summa"
        android:layout_below="@id/you_have"

        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <RelativeLayout
        android:id="@+id/title_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/title_back">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/button_settings"
            android:onClick="buttonSetting"

            app:srcCompat="@android:drawable/ic_menu_manage" />

        <TextView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="40dp" />


    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accounts_list_main"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/back"
        android:layout_below="@+id/title_bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/title_back"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/button_history"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="130dp"
            android:layout_weight="1"
            android:text="History" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/accounts_list_main"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="40dp"

        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:scaleType="centerInside"
            android:layout_marginStart="20dp"

            android:contentDescription="@string/plus"
            app:srcCompat="@drawable/plus_round_icon" />

        <ImageButton
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:scaleType="centerInside"
            android:contentDescription="@string/minus"
            app:srcCompat="@drawable/minus_round_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-10dp"
        android:layout_below="@id/accounts_list_main"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="20dp"
            android:text="account"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="22dp"
            android:text="category"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statisticLayout"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_below="@id/linear_Button"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"


        >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profitResycler"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exspenceResycler"
            android:layout_width="200dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>